fixup! Add dark theme and toggle button (needs JS)
Mobile view do not overlap theme icon and navigation icon.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -610,11 +610,6 @@ main {
     opacity: 1;
 }
 
-.theme-toggle svg {
-    width: 1.75rem;
-    height: 1.75rem;
-}
-
 [data-theme="dark"] .theme-toggle .icon-moon,
 :not([data-theme="dark"]) .theme-toggle .icon-sun {
     display: none;
